--- a/actions.yml
+++ b/actions.yml
@@ -76,6 +76,9 @@ EnricoMi/publish-unit-test-result-action:
 JamesIves/github-pages-deploy-action:
   6c2d9db40f9296374acc17b90404b6e8864128c8:
     tag: v4.7.3
+    expires_at: 2026-02-23
+  4a3abc783e1a24aeb44c16e869ad83caf6b4cc23:
+    tag: v4.7.4
 JustinBeckwith/linkinator-action:
   3d5ba091319fa7b0ac14703761eebb7d100e6f6d:
     tag: v1.11.0
