Update approved_patterns.yml and .github/workflows/dummy.yml based on actions.yml
Generated by .github/workflows/update_dummy.yml

--- a/approved_patterns.yml
+++ b/approved_patterns.yml
@@ -117,6 +117,7 @@
 - jarvusinnovations/background-action@*
 - jasonetco/create-an-issue@1b14a70e4d8dc185e5cc76d3bec9eab20257b2c5
 - jidicula/clang-format-action@*
+- Jimver/cuda-toolkit@6008063726ffe3309d1b22e413d9e88fed91a2f2
 - jlumbroso/free-disk-space@*
 - jrouly/scalafmt-native-action@14620cde093e5ff6bfbbecd4f638370024287b9d
 - jrouly/scalafmt-native-action@*
