--- a/actions.yml
+++ b/actions.yml
@@ -391,6 +391,9 @@ hashicorp/setup-terraform:
 helm/chart-testing-action:
   0d28d3144d3a25ea2cc349d6e59901c4ff469b3b:
     tag: v2.7.0
+    expires_at: 2026-02-23
+  6ec842c01de15ebb84c8627d2744a0c2f2755c9f:
+    tag: v2.8.0
 helm/kind-action:
   a1b0e391336a6ee6713a0583f8c6240d70863de3:
     tag: v1.12.0
