--- a/actions.yml
+++ b/actions.yml
@@ -609,6 +609,9 @@ pypa/cibuildwheel:
     tag: v3.2.0
   9c00cb4f6b517705a3794b22395aedc36257242c:
     tag: v3.2.1
+    expires_at: 2026-02-23
+  63fd63b352a9a8bdcc24791c9dbee952ee9a8abc:
+    tag: v3.3.0
 pytooling/actions:
   '*':
     expires_at: 2025-08-01
