--- a/approved_patterns.yml
+++ b/approved_patterns.yml
@@ -169,6 +169,7 @@
 - pypa/cibuildwheel@c923d83ad9c1bc00211c5041d0c3f73294ff88f6
 - pypa/cibuildwheel@7c619efba910c04005a835b110b057fc28fd6e93
 - pypa/cibuildwheel@9c00cb4f6b517705a3794b22395aedc36257242c
+- pypa/cibuildwheel@63fd63b352a9a8bdcc24791c9dbee952ee9a8abc
 - pytooling/actions@*
 - quarto-dev/quarto-actions@*
 - reactivecircus/android-emulator-runner@*
