--- a/actions.yml
+++ b/actions.yml
@@ -72,6 +72,9 @@ dorny/test-reporter:
 DavidAnson/markdownlint-cli2-action:
   992badcdf24e3b8eb7e87ff9287fe931bcb00c6e:
     tag: v20.0.0
+    expires_at: 2026-02-23
+  30a0e04f1870d58f8d717450cc6134995f993c63:
+    tag: v21.0.0
 EnricoMi/publish-unit-test-result-action:
   '*':
     expires_at: 2025-08-01
