--- a/actions.yml
+++ b/actions.yml
@@ -14,10 +14,13 @@ astral-sh/setup-uv:
     tag: v6.7.0
     expires_at: 2026-01-26
   eb1897b8dc4b5d5bfe39a428a8f2304605e0983c:
-    expires_at: 2026-12-31
+    expires_at: 2026-02-23
     tag: v7.0.0
   85856786d1ce8acfbcc2f13a5f3fbd6b938f9f41:
     tag: v7.1.2
+    expires_at: 2026-02-23
+  1e862dfacbd1d6d858c55d9b792c756523627244:
+    tag: v7.1.4
 bytedeco/javacpp-presets/.github/actions/*:
   '*':
     expires_at: 2025-08-01
