--- a/approved_patterns.yml
+++ b/approved_patterns.yml
@@ -4,6 +4,7 @@
 - astral-sh/setup-uv@b75a909f75acd358c2196fb9a5f1299a9a8868a4
 - astral-sh/setup-uv@eb1897b8dc4b5d5bfe39a428a8f2304605e0983c
 - astral-sh/setup-uv@85856786d1ce8acfbcc2f13a5f3fbd6b938f9f41
+- astral-sh/setup-uv@1e862dfacbd1d6d858c55d9b792c756523627244
 - bytedeco/javacpp-presets/.github/actions/*@*
 - dtolnay/rust-toolchain@stable
 - golangci/*@*
