--- a/.github/workflows/dummy.yml
+++ b/.github/workflows/dummy.yml
@@ -41,6 +41,8 @@ jobs:
         if: false
       - uses: azure/setup-helm@1a275c3b69536ee54be43f2070a358922e12c8d4  # v4.3.1
         if: false
+      - uses: bazel-contrib/setup-bazel@8d2cb86a3680a820c3e219597279ce3f80d17a47  # v0.15.0
+        if: false
       - uses: betahuhn/repo-file-sync-action@8b92be3375cf1d1b0cd579af488a9255572e4619  # v1.21.1
         if: false
       - uses: browser-actions/setup-firefox@5914774dda97099441f02628f8d46411fcfbd208  # v1.7.0
