--- a/actions.yml
+++ b/actions.yml
@@ -163,6 +163,10 @@ aws-actions/configure-aws-credentials:
 azure/setup-helm:
   1a275c3b69536ee54be43f2070a358922e12c8d4:
     tag: v4.3.1
+bazel-contrib/setup-bazel:
+  '*':
+    expires_at: 2026-12-21
+    keep: true
 betahuhn/repo-file-sync-action:
   8b92be3375cf1d1b0cd579af488a9255572e4619:
     tag: v1.21.1
