--- a/approved_patterns.yml
+++ b/approved_patterns.yml
@@ -45,6 +45,7 @@
 - aws-actions/configure-aws-credentials@a03048d87541d1d9fcf2ecf528a4a65ba9bd7838
 - aws-actions/configure-aws-credentials@00943011d9042930efac3dcd3a170e4273319bc8
 - azure/setup-helm@1a275c3b69536ee54be43f2070a358922e12c8d4
+- bazel-contrib/setup-bazel@*
 - betahuhn/repo-file-sync-action@8b92be3375cf1d1b0cd579af488a9255572e4619
 - browser-actions/setup-firefox@5914774dda97099441f02628f8d46411fcfbd208
 - browser-actions/setup-geckodriver@5ef1526ed36211ab6cb531ec1cfb11f924ca2dee
