Update actions.yml and approved_actions.yml based on .github/workflows/dummy.yml
Generated by .github/workflows/update_actions.yml

--- a/actions.yml
+++ b/actions.yml
@@ -271,6 +271,9 @@ coursier/setup-action:
     keep: true
   0ed4d7e7c42eae80e14370990582092c749253c4:
     tag: v2.0.0
+    expires_at: 2026-03-09
+  7fdbcb2ec74047d6f6270a85967bc8ff1cebe626:
+    tag: v2.0.1
 cpp-linter/cpp-linter-action:
   0f6d1b8d7e38b584cbee606eb23d850c217d54f8:
     expires_at: 2025-12-22
