--- a/actions.yml
+++ b/actions.yml
@@ -271,6 +271,9 @@ coursier/setup-action:
     expires_at: 2026-03-09
   7fdbcb2ec74047d6f6270a85967bc8ff1cebe626:
     tag: v2.0.1
+cpp-linter/cpp-linter-action:
+  0f6d1b8d7e38b584cbee606eb23d850c217d54f8:
+    tag: v2.15.1
 crate-ci/typos:
   '*':
     expires_at: 2025-08-01
