--- a/approved_patterns.yml
+++ b/approved_patterns.yml
@@ -76,6 +76,7 @@
 - coursier/setup-action@*
 - coursier/setup-action@0ed4d7e7c42eae80e14370990582092c749253c4
 - coursier/setup-action@7fdbcb2ec74047d6f6270a85967bc8ff1cebe626
+- cpp-linter/cpp-linter-action@0f6d1b8d7e38b584cbee606eb23d850c217d54f8
 - crate-ci/typos@*
 - crazy-max/ghaction-import-gpg@e89d40939c28e39f97cf32126055eeae86ba74ec
 - damccorm/tag-ur-it@6fa72bbf1a2ea157b533d7e7abeafdb5855dbea5
