--- a/actions.yml
+++ b/actions.yml
@@ -160,6 +160,9 @@ azure/setup-helm:
 betahuhn/repo-file-sync-action:
   8b92be3375cf1d1b0cd579af488a9255572e4619:
     tag: v1.21.1
+biomejs/setup-biome:
+  454fa0d884737805f48d7dc236c1761a0ac3cc13:
+    tag: v2.6.0
 browser-actions/setup-firefox:
   5914774dda97099441f02628f8d46411fcfbd208:
     tag: v1.7.0
