--- a/.github/workflows/dummy.yml
+++ b/.github/workflows/dummy.yml
@@ -41,6 +41,8 @@ jobs:
         if: false
       - uses: betahuhn/repo-file-sync-action@8b92be3375cf1d1b0cd579af488a9255572e4619  # v1.21.1
         if: false
+      - uses: biomejs/setup-biome@454fa0d884737805f48d7dc236c1761a0ac3cc13  # v2.6.0
+        if: false
       - uses: browser-actions/setup-firefox@5914774dda97099441f02628f8d46411fcfbd208  # v1.7.0
         if: false
       - uses: browser-actions/setup-geckodriver@5ef1526ed36211ab6cb531ec1cfb11f924ca2dee
