--- a/approved_patterns.yml
+++ b/approved_patterns.yml
@@ -44,6 +44,7 @@
 - aws-actions/configure-aws-credentials@00943011d9042930efac3dcd3a170e4273319bc8
 - azure/setup-helm@1a275c3b69536ee54be43f2070a358922e12c8d4
 - betahuhn/repo-file-sync-action@8b92be3375cf1d1b0cd579af488a9255572e4619
+- biomejs/setup-biome@454fa0d884737805f48d7dc236c1761a0ac3cc13
 - browser-actions/setup-firefox@5914774dda97099441f02628f8d46411fcfbd208
 - browser-actions/setup-geckodriver@5ef1526ed36211ab6cb531ec1cfb11f924ca2dee
 - bufbuild/buf-breaking-action@*
