--- a/approved_patterns.yml
+++ b/approved_patterns.yml
@@ -199,6 +199,7 @@
 - test-summary/action@*
 - timonvs/pr-labeler-action@*
 - untitaker/hyperlink@e66bb17cc9ae341677431edec3b893a0aa6ac747
+- untitaker/hyperlink@fb5bb9c5011a3d143a54b4b30aedc30ec5bc0f89
 - uraimo/run-on-arch-action@d94c13912ea685de38fccc1109385b83fd79427d
 - vapier/coverity-scan-action@2068473c7bdf8c2fb984a6a40ae76ee7facd7a85
 - vimtor/action-zip@5f1c4aa587ea41db1110df6a99981dbe19cee310
