--- a/actions.yml
+++ b/actions.yml
@@ -154,6 +154,9 @@ aws-actions/configure-aws-credentials:
     tag: v5.0.0
   00943011d9042930efac3dcd3a170e4273319bc8:
     tag: v5.1.0
+    expires_at: 2026-03-31
+  61815dcd50bd041e203e49132bacad1fd04d2708:
+    tag: v5.1.1
 azure/setup-helm:
   1a275c3b69536ee54be43f2070a358922e12c8d4:
     tag: v4.3.1
