--- a/approved_patterns.yml
+++ b/approved_patterns.yml
@@ -42,6 +42,7 @@
 - awalsh128/cache-apt-pkgs-action@*
 - aws-actions/configure-aws-credentials@a03048d87541d1d9fcf2ecf528a4a65ba9bd7838
 - aws-actions/configure-aws-credentials@00943011d9042930efac3dcd3a170e4273319bc8
+- aws-actions/configure-aws-credentials@61815dcd50bd041e203e49132bacad1fd04d2708
 - azure/setup-helm@1a275c3b69536ee54be43f2070a358922e12c8d4
 - betahuhn/repo-file-sync-action@8b92be3375cf1d1b0cd579af488a9255572e4619
 - biomejs/setup-biome@454fa0d884737805f48d7dc236c1761a0ac3cc13
