Update actions.yml and approved_actions.yml based on .github/workflows/dummy.yml
Generated by .github/workflows/update_actions.yml

--- a/actions.yml
+++ b/actions.yml
@@ -749,6 +749,9 @@ golangci/golangci-lint-action:
 mlugg/setup-zig:
   8d6198c65fb0feaa111df26e6b467fea8345e46f:
     tag: v2.0.5
+    expires_at: 2026-03-31
+  fa65c4058643678a4e4a9a60513944a7d8d35440:
+    tag: v2.1.0
 posit-dev/setup-air:
   63e80dedb6d275c94a3841e15e5ff8691e1ab237:
     tag: v1.0.0
