--- a/actions.yml
+++ b/actions.yml
@@ -365,6 +365,9 @@ graalvm/setup-graalvm:
     tag: v1.3.6
   eec48106e0bf45f2976c2ff0c3e22395cced8243:
     tag: v1.4.2
+    expires_at: 2026-03-31
+  790e28947b79a9c09c3391c0f18bf8d0f102ed69:
+    tag: v1.4.4
 gradle/wrapper-validation-action:
   '*':
     keep: true
