--- a/actions.yml
+++ b/actions.yml
@@ -750,3 +750,6 @@ posit-dev/setup-air:
 vmactions/freebsd-vm:
   487ce35b96fae3e60d45b521735f5aa436ecfade:
     tag: v1.2.4
+runs-on/action:
+  cd2b598b0515d39d78c38a02d529db87d2196d1e:
+    tag: v2.0.3
