--- a/approved_patterns.yml
+++ b/approved_patterns.yml
@@ -45,6 +45,7 @@
 - aws-actions/configure-aws-credentials@61815dcd50bd041e203e49132bacad1fd04d2708
 - azure/setup-helm@1a275c3b69536ee54be43f2070a358922e12c8d4
 - bazel-contrib/setup-bazel@*
+- bazel-contrib/setup-bazel@8d2cb86a3680a820c3e219597279ce3f80d17a47
 - betahuhn/repo-file-sync-action@8b92be3375cf1d1b0cd579af488a9255572e4619
 - biomejs/setup-biome@454fa0d884737805f48d7dc236c1761a0ac3cc13
 - browser-actions/setup-firefox@5914774dda97099441f02628f8d46411fcfbd208
