--- a/approved_patterns.yml
+++ b/approved_patterns.yml
@@ -170,6 +170,7 @@
 - pyTooling/Actions@*
 - pypa/cibuildwheel@9c00cb4f6b517705a3794b22395aedc36257242c
 - pypa/cibuildwheel@63fd63b352a9a8bdcc24791c9dbee952ee9a8abc
+- pypa/cibuildwheel@298ed2fb2c105540f5ed055e8a6ad78d82dd3a7e
 - pytooling/actions@*
 - quarto-dev/quarto-actions@*
 - reactivecircus/android-emulator-runner@*
