--- a/approved_patterns.yml
+++ b/approved_patterns.yml
@@ -157,6 +157,7 @@
 - ocaml/setup-ocaml@*
 - olafurpg/setup-scala@*
 - opentofu/setup-opentofu@000eeb8522f0572907c393e8151076c205fdba1b
+- opentofu/setup-opentofu@9d84900f3238fab8cd84ce47d658d25dd008be2f
 - oracle-actions/setup-java@*
 - orhun/git-cliff-action@d77b37db2e3f7398432d34b72a12aa3e2ba87e51
 - orhun/git-cliff-action@e16f179f0be49ecdfe63753837f20b9531642772
