--- a/approved_patterns.yml
+++ b/approved_patterns.yml
@@ -221,3 +221,4 @@
 - mlugg/setup-zig@fa65c4058643678a4e4a9a60513944a7d8d35440
 - mlugg/setup-zig@d1434d08867e3ee9daa34448df10607b98908d29
 - posit-dev/setup-air@63e80dedb6d275c94a3841e15e5ff8691e1ab237
+- runs-on/action@cd2b598b0515d39d78c38a02d529db87d2196d1e
