Update actions.yml and approved_actions.yml based on .github/workflows/dummy.yml
Generated by .github/workflows/update_actions.yml

--- a/actions.yml
+++ b/actions.yml
@@ -646,6 +646,9 @@ sbt/setup-sbt:
     expires_at: 2026-04-06
   a627500d27445f8c5021755a439829b6e78e3358:
     tag: v1.1.15
+    expires_at: 2026-04-27
+  ae54f7cfe46ec0d24ade661d77f007360ab48bda:
+    tag: v1.1.16
 scacap/action-surefire-report:
   '*':
     expires_at: 2025-08-01
