--- a/approved_patterns.yml
+++ b/approved_patterns.yml
@@ -184,6 +184,7 @@
 - sbt/setup-sbt@*
 - sbt/setup-sbt@3e125ece5c3e5248e18da9ed8d2cce3d335ec8dd
 - sbt/setup-sbt@a627500d27445f8c5021755a439829b6e78e3358
+- sbt/setup-sbt@ae54f7cfe46ec0d24ade661d77f007360ab48bda
 - scacap/action-surefire-report@*
 - scacap/action-surefire-report@5609ce4db72c09db044803b344a8968fd1f315da
 - scala-steward-org/scala-steward-action@53d486a68877f4a6d1e110e8058fe21e593db356
