Update actions.yml and approved_actions.yml based on .github/workflows/dummy.yml
Generated by .github/workflows/update_actions.yml

--- a/actions.yml
+++ b/actions.yml
@@ -278,6 +278,9 @@ coursier/cache-action:
     keep: true
   bebeeb0e6f48ebad66d3783946588ecf43114433:
     tag: 6.4.7
+    expires_at: 2026-04-28
+  c5ca79321d170b8a18c288d9cadc2a6037166d0f:
+    tag: 6.4.7
 coursier/setup-action:
   039f736548afa5411c1382f40a5bd9c2d30e0383:
     tag: v1.3.9
