--- a/approved_patterns.yml
+++ b/approved_patterns.yml
@@ -15,6 +15,7 @@
 - quarto-dev/quarto-actions/*@*
 - r-lib/actions/*@*
 - readthedocs/actions/preview@*
+- rust-lang/crates-io-auth-action@b7e9a28eded4986ec6b1fa40eeee8f8f165559ec
 - rustsec/*@*
 - vhelm/chart-releaser-action@*
 - AdoptOpenJDK/install-jdk@*
