--- a/actions.yml
+++ b/actions.yml
@@ -168,11 +168,11 @@ azure/setup-helm:
   1a275c3b69536ee54be43f2070a358922e12c8d4:
     tag: v4.3.1
 bazel-contrib/setup-bazel:
-  '*':
-    expires_at: 2026-12-21
-    keep: true
   8d2cb86a3680a820c3e219597279ce3f80d17a47:
-    tag: v0.15.0
+    tag: 0.15.0
+    expires_at: 2026-03-31
+  083175551ceeceebc757ebee2127fde78840ca77:
+    tag: 0.18.0
 betahuhn/repo-file-sync-action:
   8b92be3375cf1d1b0cd579af488a9255572e4619:
     tag: v1.21.1
