--- a/.github/workflows/rat.yml
+++ b/.github/workflows/rat.yml
@@ -1,4 +1,3 @@
-#
 # Licensed to the Apache Software Foundation (ASF) under one
 # or more contributor license agreements.  See the NOTICE file
 # distributed with this work for additional information
@@ -16,8 +15,30 @@
 # specific language governing permissions and limitations
 # under the License.
 #
-# Generated file, prevent accidental commits
-approved_patterns.yml
-/gateway/__pycache__
-/gateway/test_out_dummy.yml
-/tmp
+name: rat
+
+on:
+  push:
+    branches: [main]
+  pull_request:
+    branches: [main]
+
+permissions:
+  contents: read
+
+jobs:
+  rat:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v6
+        with:
+          persist-credentials: false
+
+      - name: Set up JDK 21
+        uses: actions/setup-java@be666c2fcd27ec809703dec50e508c2fdc7f6654 # v5
+        with:
+          java-version: '21'
+          distribution: 'temurin'
+
+      - name: Run Creadur RAT
+        run: utils/rat.sh
